--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,22 @@ body {
     padding: 0;
     margin: 0;
 }
+
+#cabecera {
+    background-color: #33a;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+    color: #fff;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #tagline {
+    font-weight: normal;
+    margin: 0 0 0 1em;
+    font-size: 0.8em;
+}
+
 #container {
     width: 70%;
     padding: 1em;
@@ -16,4 +32,7 @@ body {
 
 #container h1 {
     font-size: 20px;
+}
+#post{
+    padding: 1em;
 }
