--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body {
     text-align:center;
-    font-family: 'Courier New';
+    font-family: 'Franklin Gothic Medium';
     color: #333;
     font-size: 16px;
     padding: 0;
