--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body {
     text-align:center;
     font-family: 'Franklin Gothic Medium';
-    color: #333;
+    color: red;
     font-size: 16px;
     padding: 0;
     margin: 0;
