--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,12 +8,17 @@ body {
 }
 
 #cabecera {
-    background-color: #33a;
+    background-color: #37488b;
     box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
     color: #fff;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
+}
+
+#logo {
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline {
@@ -35,4 +40,5 @@ body {
 }
 #post{
     padding: 1em;
+    background-color: #fff;
 }
